--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         }
     ],
     "require": {
-        "php": "^7.2"
+        "php": "^7.2",
+        "google/apiclient": "^2.0"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.3",
