--- a/.styleci.yml
+++ b/.styleci.yml
@@ -1,5 +1,11 @@
 preset: laravel
 
+enabled:
+- length_ordered_imports
+- long_list_syntax
+
 disabled:
-  - single_class_element_per_statement
-  - self_accessor
+- self_accessor
+- short_list_syntax
+- alpha_ordered_imports
+- single_class_element_per_statement
