--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,14 @@
     "license": "MIT",
     "authors": [
         {
+            "name": "Famdirksen",
+            "email": "info@famdirksen.nl",
+            "homepage": "https://famdirksen.nl",
+            "role": "Company"
+        }, {
             "name": "Robin Dirksen",
             "email": "robin@famdirksen.nl",
-            "homepage": "https://famdirksen.nl",
+            "homepage": "https://robindirksen.nl",
             "role": "Developer"
         }
     ],
