--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -12,8 +12,8 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                php: [7.4, 7.3, 7.2]
-                laravel: [7.*, 6.*, 5.8.*]
+                php: [8.1, 8.0, 7.4, 7.3, 7.2]
+                laravel: [8.*, 7.*, 6.*, 5.8.*]
                 dependency-version: [prefer-lowest, prefer-stable]
                 os: [ubuntu-latest]
                 include:
