--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,7 +13,7 @@ jobs:
             fail-fast: false
             matrix:
                 php: [8.1, 8.0, 7.4, 7.3, 7.2]
-                laravel: [8.*, 7.*, 6.*, 5.8.*]
+                laravel: [9.*, 8.*, 7.*, 6.*, 5.8.*]
                 dependency-version: [prefer-lowest, prefer-stable]
                 os: [ubuntu-latest]
                 include:
