--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -12,11 +12,13 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                php: [8.1, 8.0, 7.4, 7.3, 7.2]
-                laravel: [9.*, 8.*, 7.*, 6.*, 5.8.*]
+                php: [8.1, 8.0, 7.4]
+                laravel: [9.*, 8.*, 7.*]
                 dependency-version: [prefer-lowest, prefer-stable]
                 os: [ubuntu-latest]
                 include:
+                    - laravel: 9.*
+                    - laravel: 8.*
                     - laravel: 7.*
                     - laravel: 6.*
                     - laravel: 5.8.*
