--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "google/apiclient": "^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.2"
+        "phpunit/phpunit" : "^9.4",
+        "orchestra/testbench": "^6.23|^7.0",
     },
     "autoload": {
         "psr-4": {
